syntax = "proto3";

package gnboot;

import "openapiv3/annotations.proto";
import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "proto/subtitle.proto";
import "proto/actor.proto";

option go_package = "github.com/liluoliluoli/gnboot/api/episode";

option (openapi.v3.document) = {
  info : {title : "episode";
version : "1.0.0";
}
components : {
security_schemes: {
additional_properties:
  [{
    name:
      "BearerAuth";
    value: {
    security_scheme: {
    type:
      "http";
    scheme:
      "bearer";
    }
    }
  }]
}
}
  security: [
    {
      additional_properties: [
        {
          name: "BearerAuth";
          value: {
            value: []
          }
  }
      ]
      }
  ]
  }
  ;

  service EpisodeRemoteService {
    rpc GetEpisodePlayUrl(GetEpisodeRequest) returns (EpisodeResp) {
      option (google.api.http) = {
        get : "/episode/get"
      };
    }
  }

  message EpisodeResp {
    int32 id = 1;
    int32 videoId = 2;
    int32 episode = 3;
    string url = 4;
    string platform = 5;
    string ext = 6;
    int32 duration = 7;
    repeated gnboot.Subtitle subtitles = 8;
  }

  message GetEpisodeRequest {
    int32 id = 1;
  }
